# ToyCC

./: .gitignore  CMakeLists.txt  ISSUES.md  README.md
cmake/: Utils.cmake
files/: grammar.bnf  main.c
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  code_gen_visitor.cpp  codegen_context.cpp  codegen_visitor.cpp  emit_target.cpp  main.cpp  symbol_table.cpp
src/backend/include/: block_mgr.hpp  codegen_context.hpp  codegen_visitor.hpp  emit_target.hpp  function_gen_visitor.hpp  symbol_table.hpp
src/front/: CMakeLists.txt  driver.cpp  parser.yy
src/front/ast/: base_components_ast.cpp  decl_ast.cpp  expr_ast.cpp  stmt_ast.cpp
src/front/include/: driver.hpp  llvm_location.hpp  utility.hpp
src/frontend/: CMakeLists.txt  driver.cpp  lexer.ll  llvm_location.cpp  parser.yy
src/frontend/ast/: CMakeLists.txt  ast.cpp  base_ast.cpp  base_components_ast.cpp  decl_ast.cpp  expr_ast.cpp  operator_ast.cpp  stmt_ast.cpp
src/frontend/include/: driver.hpp  llvm_location.hpp
src/langspec/: CMakeLists.txt  conversion.cpp  symbol_table.cpp  type.cpp  type_mgr.cpp
src/main/: CMakeLists.txt  code_gen_visitor.cpp  emit_target.cpp  main.cpp
src/semantix/: CMakeLists.txt  conversion.cpp  type_mgr.cpp
test/: CMakeLists.txt
test/func_test/: CMakeLists.txt  driver.sh  func.sh
test/unit_test/: CMakeLists.txt  main.cpp
test/unit_test/backend_test/: CMakeLists.txt
test/unit_test/backend_test/emit_target/: CMakeLists.txt  emit_target_test.cpp
test/unit_test/langspec_test/: CMakeLists.txt  cvt_test.cpp  symbol_table_test.cpp
test/unit_test/mock/: llvm_base.hpp
(+41 files in other folders)
